--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
     </head>
     <body>
-        <h1>Casafunsho</h1>
-        
+        <h1>CASAFUNSH</h1>
+        <h2>CASAFUNSH</h2>
+        <p>Welcome to CASAFUNSH LTD</p>
+
 
     </body>
 </html>
