--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
     </head>
     <body>
-        <h1>CASAFUNSH</h1>
+        <h1 style="color:blue">CASAFUNSH</h1>
         <h2>CASAFUNSH</h2>
+        
         <p>Welcome to CASAFUNSH LTD</p>
 
 
