--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
     </head>
     <body>
-        <h1 style="color:blue">CASAFUNSH</h1>
-        <h2>CASAFUNSH</h2>
+        <h1>MOZEED ODUTAYO</h1>
+        <h2>MOZEED ODUTAYO</h2>
         
-        <p>Welcome to CASAFUNSH LTD</p>
+        <p> An Astronaut</p>
 
 
     </body>
