--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <hr>
         <h2>MOZEED ODUTAYO</h2>
         
-        <p> An Astronaut</p>
+        <p> NASA</p>
 
+        <a herf="www.nasa.org"></a>
+        <img src="image/astronaut.webp:">
 
     </body>
 </html>
