--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         <p> NASA</p>
 
-        <a herf="www.nasa.org"></a>
-        <img src="image/astronaut.webp:">
+        <a herf="https://www.nasa.org">This is a link></a>
+        <img src="astronaut.webp" height="300" alt="This a picture of astronaut">
 
     </body>
 </html>
