--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <p> NASA</p>
 
-        <a herf="https://www.nasa.org" target=_self title="This is the link to nasa"</a>
+        <a herf="https://www.nasa.org"></a>
         <img src="astronaut.webp" height="300" alt="This a picture of astronaut">
 
     </body>
