--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         
         <p> NASA</p>
         <ol>
-            <li>1234</li>
+            <li>list1</li>
+            <li>2list</li>
+            <li>3list</li>
         </ol>
 
         <a href="https://www.nasa.gov"> nasa </a>
@@ -20,8 +22,6 @@
 
     </body>
 </html>
-
-
 
 
 
