--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 
     </head>
     <body>
+
         <h1>MOZEED ODUTAYO</h1>
+        <h2>9/16/24</h2>
         <hr>
         <h2>MOZEED ODUTAYO</h2>
         
-        <p> NASA</p>
+        <p> National Aeronautic and Space Administration</p>
         <ol>
             <li>list1</li>
             <li>2list</li>
@@ -19,6 +21,12 @@
 
         <a href="https://www.nasa.gov"> nasa </a>
         <img src="astronaut.webp" height="300" alt="This a picture of astronaut">
+
+        <ul>
+            <li>list1</li>
+            <li>2list</li>
+            <li>3list</li>
+        </ul>
 
     </body>
 </html>
