--- a/lab3.html
+++ b/lab3.html
@@ -12,17 +12,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
     <body>
-
-        <div class="jumbotron">
-            <h1 class="display-4">Lab3</h1>
-            <p class="lead">National Aeronautic Space Administration</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>
-          </div>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -31,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Link</a>
@@ -57,5 +47,41 @@
               </form>
             </div>
           </nav>
+        <img src="astronaut.webp" height="300" alt="This a picture of astronaut">
 
+
+        <div class="jumbotron">
+            <h1 class="display-4">Lab3</h1>
+            <p class="lead">Why Do Astronauts Need Spacesuits?</p>
+            <hr class="my-4">
+            <div class="container container-fluid"></div>
+            <p class="lead">
+                mozeed odutayo
+
+              <a class="btn btn-primary btn-lg" href="#" role="button">Spacesuits help astronauts in many ways. The suits protect astronauts from getting too hot or cold and also give astronauts oxygen to breathe while they are working in space. The suits hold water to drink during spacewalks. They also keep astronauts from getting hurt by space dust. Space dust may not sound very dangerous, but when a tiny object is moving many times faster than a bullet, it can cause injury. Spacesuits also protect astronauts from radiation in space, and are equipped with special, gold-lined visors to protect astronauts’ eyes from bright sunlight.</a>
+            </p>
+            <ol>
+                <li>list 1</li>
+                <li>list 2</li>
+                <li>list 3</li>
+            </ol>
+
+
+            <ul>
+
+                <li>list 1</li>
+                <li>list 2</li>
+                <li>listn 3</li>
+            </ul>
+
+
+
+
+          </div>
+
+          <hr>
+          <p>
+            mozeed odutayo  Sept 25, 2024
+          </p>
+          
     </body>
