--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </ol>
 
         <a href="https://www.nasa.gov"> nasa </a>
+        <a href="lab3.html">lab 3</a>
         <img src="astronaut.webp" height="300" alt="This a picture of astronaut">
 
         <ul>
