--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <a href="https://www.nasa.gov"> nasa </a>
         <a href="lab3.html">lab 3</a>
+        <a href="./lab4.html">lab4</a>
         <img src="astronaut.webp" height="300" alt="This a picture of astronaut">
 
         <ul>
